# htr-benchmark

./: .env.example  .gitignore  CLAUDE.md  Readme.md  pyproject.toml  run_benchmark.py
htr_benchmark/: config.py  evaluate.py  output.py  pdf_converter.py  runner.py
htr_benchmark/models/: base.py  bedrock.py  gemini.py  lmstudio.py
tests/: test_evaluate.py  test_pdf_converter.py
